Add table builder

--- a/src/demo/sass/demo.scss
+++ b/src/demo/sass/demo.scss
@@ -78,3 +78,10 @@ label[for='toggleEnhancedBootstrapEnabled'] {
   margin-left: 1rem;
   display: none;
 }
+
+.area-container {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: #f9f9f9;
+}
