--- a/src/sass/form-render.scss
+++ b/src/sass/form-render.scss
@@ -47,3 +47,38 @@
     }
   }
 }
+.table-builder {
+  display: flex;
+  border: 1px solid #ddd;
+  margin-top: 10px;
+}
+
+.table-column {
+  flex: 1;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+  text-align: center;
+}
+
+.table-column:last-child {
+  border-right: none;
+}
+
+.column-name {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.drop-zone {
+  min-height: 50px;
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 10px;
+  margin-top: 5px;
+}
+
+.drop-hover {
+  border-color: #66afe9;
+  background-color: #e6f7ff;
+}
